// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-auth-form hoc renders correctly withAuthForm with props renders correctly 1`] = `
<MockComponent
  email="test@test.js"
  onChange={[Function]}
  password="123"
/>
`;

exports[`with-auth-form hoc renders correctly withAuthForm without props renders correctly 1`] = `
<MockComponent
  email=""
  onChange={[Function]}
  password=""
/>
`;
